some more work on dragging and resizing...getting there but a few layout issues exist in scrolled positions

--- a/jquery.ganttView.css
+++ b/jquery.ganttView.css
@@ -55,6 +55,7 @@ div.ganttview-vtheader {
 	margin-top: 41px;
 	width: 240px;
 	overflow: hidden;
+	background-color: #fff;
 }
 
 div.ganttview-vtheader-item {
